--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -8,13 +8,11 @@
 
 html,
 body {
-  @apply bg-gray-50 dark:bg-gray-900;
+  @apply bg-gray-50;
 }
 
 /* Write your own custom component styles here */
-.btn-blue {
-  @apply px-4 py-2 font-bold text-white bg-blue-500 rounded;
-}
+
 
 /* Start purging... */
 @tailwind utilities;
